--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 .settings/.jsdtscope
 target/visitator-1.0-SNAPSHOT/index.jsp
 src/main/webapp/WEB-INF/props/messages.properties
+.classpath
+.project
