--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
 		<version>5.0.1.Final</version>
 	</dependency>
 	
+	  <dependency>
+		  <groupId>mysql</groupId>
+		  <artifactId>mysql-connector-java</artifactId>
+		  <version>5.1.6</version>
+	  </dependency>
+	
 <!-- 	<dependency> -->
 <!-- 		<groupId>com.google.code.gson</groupId> -->
 <!-- 		<artifactId>gson</artifactId> -->
